changement de la structure de l interface
