# src/resources/wallet/wallet.controller.ts
@@ -4,13 +4,6 @@ import { IWalletType } from "./wallet";
 import auth from "../../middleware/autorization";
 import * as express from 'express';
 
-enum TypeUser {
-      system = "system",
-      customer = "customer"
-}
-
-const authMessage = "Vous ne disposez pas de droit pour effectuer cette demande."
-
 @Tags("Wallet")
 @Route("api/admin")
 export class Wallet extends Controller {
@@ -19,13 +12,13 @@ export class Wallet extends Controller {
 
       @Post("wallets")
       @Security("Bearer", ["admin"])
-      public async Create(@Body() input: IWalletType,
-            @Res() succes: TsoaResponse<200, { status: true; city: any }>,
+      public async Create(@Body() input: Omit<IWalletType, "user"|"walletId">,
+            @Res() succes: TsoaResponse<200, { status: true; wallet: any }>,
             @Res() badRequest: TsoaResponse<400, { status: false; message: string }>,
             @Request() request: express.Request
       ): Promise<any> {
             const result = await this.wallet.registre(auth.user(request), input)
-            return result[0] ? succes(200, { status: true, city: result[0] })
+            return result[0] ? succes(200, { status: true, wallet: result[0] })
                   : badRequest(400, {
                         status: false, message: `Error: ${result[1]} `
                   });
@@ -34,12 +27,12 @@ export class Wallet extends Controller {
       @Get("wallets")
       @Security("Bearer", ["admin"])
       public async getWallets(
-            @Res() succes: TsoaResponse<200, { status: true; city: any }>,
+            @Res() succes: TsoaResponse<200, { status: true; wallet: any }>,
             @Res() badRequest: TsoaResponse<400, { status: false; message: string }>,
             @Request() request: express.Request
       ): Promise<any> {
             const result = await this.wallet.getAll(auth.user(request))
-            return result[0] ? succes(200, { status: true, city: result[0] })
+            return result[0] ? succes(200, { status: true, wallet: result[0] })
                   : badRequest(400, {
                         status: false, message: `Error: ${result[1]} `
                   });
@@ -48,13 +41,13 @@ export class Wallet extends Controller {
       @Put("wallets")
       @Security("Bearer", ["admin"])
       public async Update(@Body() input: Omit<IWalletType, "user">,
-            @Res() succes: TsoaResponse<200, { status: true; city: any }>,
+            @Res() succes: TsoaResponse<200, { status: true; wallet: any }>,
             @Res() badRequest: TsoaResponse<400, { status: false; message: string }>,
             @Request() request: express.Request
       ): Promise<any> {
 
             const result = await this.wallet.update(auth.user(request), input)
-            return result[0] ? succes(200, { status: true, city: result[0] })
+            return result[0] ? succes(200, { status: true, wallet: result[0] })
                   : badRequest(400, {
                         status: false, message: `Error: ${result[1]} `
                   });
